# pierrem-blog

./: .gitignore  Cargo.toml  README.md
articles/: I_really_like_flowers,_here_are_a_few_pictures.markdown  README.md  ROADMAP.md
assets/: main.css
src/: error.rs  main.rs  search.rs
src/web/: api.rs  mod.rs  web.rs
templates/: article.html  base.html  home.html  me.html  mini-article.html  search.html
