[package]
name = "pierrem-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
priority-queue = "1.3.2"
pulldown-cmark = "0.9.3"
rust-stemmers = "1.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-case-mapping = "0.5.0"
